Fix search bar alignment problem
- Search input now sits inside the map component
  so that the absolute positioning on the zoom
  and loader thingy matches. Updated those to be
  10px _inside_ the map since the map no longer
  takes up the entire page.

--- a/sources/scss/search.scss
+++ b/sources/scss/search.scss
@@ -1,15 +1,15 @@
-.SearchField {
+.Map .SearchField {
   position: absolute;
   width: 500px;
   height: 40px;
-  top: 80px;
+  top: 10px;
   left: 55px;
   z-index: 10;
 }
 
 @media screen and (max-width: 470px) {
     .SearchField {
-        width: 80%; 
+        width: 80%;
         left: 0;
         margin-left: 10%;
     }
